@@ -132,7 +132,7 @@
 
         {% videoplaceholder video %}
         
-        {% placeholder content2 with TinyMCE %}
+        {% placeholder content2 %}
 
 
     </div>
